setTimeout correction
was too long

--- a/src/modules/Hands/Hands.css
+++ b/src/modules/Hands/Hands.css
@@ -29,6 +29,7 @@
   flex-direction: column;
   align-items: center;
   gap: 3em;
+  min-width: 16em;
 }
 
 .hands-selected-title {
@@ -148,6 +149,7 @@
     gap: 0;
     flex-direction: column-reverse;
     width: 10em;
+    min-width: 9em;
   }
   .hands-selected-title {
     font-size: 0.9em;
